# src/routes/characterRoutes.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const router = express.Router();
 const characterController = require('../controllers/characterController');
+const { ensureAuthenticated } = require('../middleware/authMiddleware');
 
 // GET all characters
 router.get('/', characterController.getAllCharacters);
@@ -9,12 +10,12 @@ router.get('/', characterController.getAllCharacters);
 router.get('/:id', characterController.getCharacterById);
 
 // POST a new character
-router.post('/', characterController.createCharacter);
+router.post('/', ensureAuthenticated, characterController.createCharacter);
 
-// PUT/PATCH to update a character
-router.put('/:id', characterController.updateCharacter);
+// PUT - update a character
+router.put('/:id', ensureAuthenticated, characterController.updateCharacter);
 
 // DELETE a character
-router.delete('/:id', characterController.deleteCharacter);
+router.delete('/:id', ensureAuthenticated, characterController.deleteCharacter);
 
 module.exports = router;
